Changed timesyncd pool config to global ntp pools by default

--- a/config/etc/systemd/timesyncd.conf
+++ b/config/etc/systemd/timesyncd.conf
@@ -12,6 +12,13 @@
 # See timesyncd.conf(5) for details.
 
 [Time]
-Servers=time.nrc.ca time.chu.nrc.ca
+# Enter your desired NTP servers here.  I'm in Canada so I like using:
+#   time.nrc.ca time.chu.nrc.ca
+# Other great options are your local ntp.org pool. In Canada:
+#   0.ca.pool.ntp.org 1.ca.pool.ntp.org 2.ca.pool.ntp.org 3.ca.pool.ntp.org
+# You can find all ntp.org server pools at https://www.ntppool.org/zone/@ and
+# then navigate to your closest region.
+# I've set this file to use the 'universal' global pools by default 
+Servers=0.pool.ntp.org 1.pool.ntp.org 2.pool.ntp.org 3.pool.ntp.org
 #NTP=
 #FallbackNTP=0.debian.pool.ntp.org 1.debian.pool.ntp.org 2.debian.pool.ntp.org 3.debian.pool.ntp.org
